[package]
name = "nofuzz_tuner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# cdylib type creates a library with a C-compatible Application Binary Interface (ABI), 
# making it possible to link the Rust code from other programming languages that can 
# interface with C, such as Python, Ruby, or Node.js.
crate-type = ["cdylib"]
path = "src/main.rs"

[dependencies]
cpal = "0.12.1"
#crossterm = "0.27.0"
pitch-detection = "0.3.0"
yin = { path = "../yin" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.26"
audioviz = "0.5.0"
lazy_static = "1.4"
wasm-bindgen = "0.2.74"