[workspace]
members = [
    ".",                    # The main binary crate
    "nofuzz_tuner_lib",     # The library crate
]

[workspace.metadata]
clippy-args = ["--all-targets", "--all-features", "-D", "warnings"]

[package]
name = "nofuzz_tuner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.12.1"
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.26"
nofuzz_tuner_lib = { path = "./nofuzz_tuner_lib" }  # Link to the local library
