[package]
name = "nofuzz_tuner_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
pitch-detection = "0.3.0"
yin = "0.2.0"
audioviz = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
wasm-bindgen = "0.2"
js-sys = "0.3.70"
console_error_panic_hook = "0.1.6"

[lib]
crate-type = ["cdylib", "rlib"]
