[package]
name = "nofuzz_tuner_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
pitch-detection = "0.3.0"
yin = "0.2.0"
rustfft = "6.2"
audioviz = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
once_cell = "1.19"
js-sys = "0.3.70"
console_error_panic_hook = "0.1.6"
symphonia = { version = "0.5", features = ["aac", "isomp4"] }
hound = "3.5"

[lib]
crate-type = ["cdylib", "rlib"]
